[package]
name = "chat-rs"
version = "0.1.0"
edition = "2018"
authors = ["Sasha Prokhorenko <warbles.lieu_04@icloud.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
async-std = { version = "1.10.0", features = ["unstable"] }
tokio = { version = "1.10.1", features = ["sync"] }
serde = { version = "1.0.129", features = ["derive", "rc"] }
serde_json = "1.0.66"
